--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/server.ts",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "start": "node app.js",
     "build": "tsc",
     "lint-staged": "lint-staged",
     "lint": "eslint --ignore-path .eslintignore --ext .js,.ts .",
@@ -13,6 +14,7 @@
     "lint-prettier": "npm run lint-check && npm run prettier-check",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "installCommand": "npm install",
   "lint-staged": {
     "src/**/*.ts": "npm run lint-prettier"
   },
@@ -40,7 +42,6 @@
     "@types/multer": "^1.4.11",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
-    "eslint": "^8.48.0",
     "eslint-config-prettier": "^9.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
