--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 
 
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "start": "node app.js",
+
+    "start": "node dist/server.js",
     "build": "tsc",
     "lint-staged": "lint-staged",
     "lint": "eslint --ignore-path .eslintignore --ext .js,.ts .",
